# pixasso

./: AUTHORS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
data/: Makefile.am  pixasso-history-view.ui  pixasso-preview.ui  pixasso-snippet-editor.ui  pixasso.desktop  pixasso.ui
po/: POTFILES.in  it.po
src/: Makefile.am  main.cpp  pixasso-app.cpp  pixasso-app.h  pixasso-history-view.cpp  pixasso-history-view.h  pixasso-history.cpp  pixasso-history.h  pixasso-main-window.cpp  pixasso-main-window.h  pixasso-misc-widgets.cpp  pixasso-misc-widgets.h  pixasso-preview.cpp  pixasso-preview.h  pixasso-snippet-editor.cpp  pixasso-snippet-editor.h  pixasso-snippet-exporter.cpp  pixasso-snippet-exporter.h  pixasso-snippet-private.cpp  pixasso-snippet-private.h  pixasso-snippet.cpp  pixasso-snippet.h  pixasso-utils.cpp  pixasso-utils.h
