desktopdir = $(datadir)/applications
desktop_DATA = pixasso.desktop

icondir = $(datadir)/icons/hicolor/scalable/apps
icon_DATA = pixasso.svg

uidir = $(datadir)/pixasso
ui_DATA = \
	pixasso.ui			\
	pixasso-preview.ui		\
	pixasso-snippet-editor.ui


EXTRA_DIST = \
	$(desktop_DATA)	\
	$(icon_DATA)	\
	$(ui_DATA)
